[gd_scene load_steps=2 format=3 uid="uid://btqhpdl81yrcp"]

[ext_resource type="Script" path="res://components/upgrades/sword_upgrades/sword_upgrades.gd" id="1_dvh3s"]

[node name="sword_upgrades" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dvh3s")

[node name="Size" type="Button" parent="."]
visible = false
layout_mode = 0
offset_right = 150.0
offset_bottom = 200.0
text = "Increase Sword 
Size"
text_overrun_behavior = 3

[node name="Speed" type="Button" parent="."]
visible = false
layout_mode = 0
offset_right = 150.0
offset_bottom = 200.0
text = "Increase Sword 
Speed
"
text_overrun_behavior = 3

[node name="Damage" type="Button" parent="."]
visible = false
layout_mode = 0
offset_right = 150.0
offset_bottom = 200.0
text = "Increase Sword 
Damage
"
text_overrun_behavior = 3

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="button_down" from="Size" to="." method="_on_size_button_down"]
[connection signal="button_down" from="Speed" to="." method="_on_speed_button_down"]
[connection signal="button_down" from="Damage" to="." method="_on_damage_button_down"]
